<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#050B18">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/gameImage"
                android:layout_width="628dp"
                android:layout_height="354dp"
                android:contentDescription="@string/game_image"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:src="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_gravity="bottom"
                android:background="@drawable/up_rounded_rectangle"
                android:contentDescription="@string/def"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/gameImage" />

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/logo_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/header"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/nameOfTheGame"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="14dp"
                android:text="@string/def"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/logoImage"
                app:layout_constraintTop_toTopOf="@+id/header" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="14dp"
                android:scrollbarSize="4dp"
                android:theme="@style/AppRatingBar"
                app:layout_constraintBottom_toBottomOf="@+id/gameImage"
                app:layout_constraintStart_toEndOf="@+id/logoImage"
                android:rating="4.9" />
            <!--   TODO : There is something wrong with colors of the bar! -->

            <TextView
                android:id="@+id/numberOfPlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="14dp"
                android:text="@string/def"
                android:textColor="#45454D"
                app:layout_constraintBottom_toBottomOf="@+id/header"
                app:layout_constraintStart_toEndOf="@+id/ratingBar" />

            <LinearLayout
                android:id="@+id/tagsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:minHeight="30dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoImage" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="top"
                android:lineSpacingExtra="5sp"
                android:text="@string/dota_2_is_a"
                android:textAppearance="@style/dota_2_is_a"
                android:translationY="-2.3sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagsLinearLayout" />

            <TextView
                android:id="@+id/review_rati"
                android:layout_width="137dp"
                android:layout_height="19dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:gravity="top"
                android:text="@string/review_rati"
                android:textAppearance="@style/review_rati"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="69dp"
                android:layout_height="58dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:gravity="top"
                android:text="@string/some_id"
                android:textAppearance="@style/some_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/review_rati" />

            <RatingBar
                android:id="@+id/ratingBar1"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="29dp"
                android:scrollbarSize="4dp"
                android:theme="@style/AppRatingBar"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/rate"
                app:layout_constraintTop_toBottomOf="@+id/review_rati"
                android:rating="4.9" />

            <TextView
                android:id="@+id/m_reviews"
                android:layout_width="76dp"
                android:layout_height="14dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:gravity="top"
                android:text="@string/m_reviews"
                android:textColor="#A8ADB7"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/rate"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar1" />

            <View
                android:id="@+id/lineView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="8dp"
                android:background="#1A1F29"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/m_reviews" />

            <LinearLayout
                android:id="@+id/reviewsLinearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:minHeight="232dp"
                android:orientation="vertical"
                android:paddingHorizontal="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lineView" />

            <Button
                android:id="@+id/buttonInstall"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/yellow_full_rounded_rectangle"
                android:text="@string/buttonInstall"
                android:textAllCaps="false"
                android:textColor="#050B18"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviewsLinearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:visibility="visible" />
</FrameLayout>